it is now responsive

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,13 +5,14 @@ body {
     font-size: $default-font-size;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
+
+    
 
     &--main {
         display: block;
@@ -21,6 +22,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     
     &--sub {
@@ -29,6 +35,10 @@ body {
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone){
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -40,6 +50,13 @@ body {
     @include gradient-bg;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
