--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,11 +7,32 @@
 }
 
 html {
-    /* font-size: 10px; */
     font-size: $font-size;  // 1 rem = 10px | 62.5%
     scroll-behavior: smooth;
+
+
+    @include respond(tab-land){
+        font-size: 56.25%; //1 rem = 9px | 56.25%
+    }
+    @include respond(tab-port){
+        font-size: 50%; //1 rem = 8px | 50%
+    }
+    // @include respond(phone){
+    //     font-size: 50%; //1 rem = 8px | 50%
+    // }
+    @include respond(big-desktop){
+        font-size: 75%;  //1 rem = 12px | 75%
+    }
+    
+    
+    
 }
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port){
+        padding: 0;
+    }
 }
