--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,6 +15,9 @@
         width: 90%;
         display: block;
         transition: all .4s;
+        @include respond(tab-port){
+            width: 100%;
+        }
 
         &:focus {
             outline: none;
@@ -48,6 +51,10 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+        @include respond(tab-port){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
     &__radio-input {
         display: none;
