--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -82,5 +82,30 @@
         hyphens: auto;
     }
 
+    @include respond(tab-land){
+
+        &__content {
+            background-image:  linear-gradient(to right bottom, rgba($color-white, 0.7), rgba($color-white, 0.7)), url("../img/nat-9.jpg");
+            background-size: cover;
+        }
+
+        &__img {
+            display: none;
+        }
+
+        &__right {
+            width: 100%;
+        }
+        &__left {
+            width: 0;
+        }
+        
+    }
+
+    @include respond(phone){
+        &__text {
+            column-count: 1;
+        }
+    }
 
 }
